Jshell implementation and comments